[package]
name = "gtfs-realtime"
description = "Updated GTFS Realtime bindings"
version = "0.1.3"
authors = ["Kyler Chin <kyler@catenarymaps.org>","Erin Moon <erin@hecke.rs>"]
license = "MIT AND Apache-2.0"
repository = "https://github.com/catenarytransit/gtfs-realtime"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
prost = "0.13.3"
prost-derive = "0.13.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.3"
