[package]
name = "gtfs-rt-nyct"
description = "GTFS-RT bindings for NYCT"
version = "0.2.0"
authors = ["Gavin Morrow <gavinfmorrow@gmail.com>", "Kyler Chin <kyler@catenarymaps.org>","Erin Moon <erin@hecke.rs>"]
license = "MIT AND Apache-2.0"
repository = "https://github.com/gavinmorrow/gtfs-rt-nyct"
edition = "2024"

[badges]
maintenance = { status = "experimental" }

[dependencies]
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.14"
